# The-Simpsons-Hit-and-Run

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  dreamcast.sh  p4ignore.txt
code/ai/: actionbuttonhandler.cpp  actionbuttonhandler.h  actionbuttonmanager.cpp  actionbuttonmanager.h  actionnames.h  state.cpp
code/ai/actor/: ActorAnimationUFO.cpp  actor.cpp  actoranimation.h  actoranimationwasp.h  actordsg.cpp  actormanager.cpp  actormanager.h  allactor.cpp  attackbehaviour.h  cutcambehaviour.cpp  flyingactor.cpp  flyingactor.h  intersectionlist.cpp  intersectionlist.h  projectile.cpp  spawnpoint.h  stunnedbehaviour.cpp  ufoattackbehaviour.cpp  ufoattackbehaviour.h  ufobeamalwaysonbehaviour.cpp  ufobeamalwaysonbehaviour.h  ufobehaviour.cpp  ufobehaviour.h
code/ai/sequencer/: action.cpp  action.h  actioncontroller.cpp  actioncontroller.h  sequencer.cpp  task.cpp
code/ai/vehicle/: trafficai.cpp  vehicleairender.cpp
code/camera/: bumpercam.cpp  burnoutcam.cpp  chasecam.cpp  chasecam.h  conversationcam.cpp  conversationcam.h  debugcam.cpp  followcam.cpp  followcam.h  frustrumdrawable.h  kullcam.cpp  pccam.cpp  railcam.cpp  reversecam.cpp  sinecosshaker.cpp  snapshotcam.cpp  staticcam.cpp  supercam.cpp  supercam.h  supercamcentral.cpp  supercamcontroller.cpp  supercamcontroller.h  supersprintcam.cpp  trackercam.cpp  walkercam.cpp  wrecklesscam.cpp  wrecklesseventlistener.cpp
code/cards/: cardgallery.cpp
code/cheats/: cheatinputhandler.cpp
code/console/: console.cpp  console.h  nameinsensitive.cpp  upcase.cpp
code/constants/: movienames.h
code/contexts/: bootupcontext.cpp  bootupcontext.h  exitcontext.cpp  frontendcontext.cpp  loadingcontext.cpp  pausecontext.cpp  playingcontext.cpp
code/contexts/demo/: democontext.cpp  loadingdemocontext.cpp
code/contexts/gameplay/: gameplaycontext.cpp  loadinggameplaycontext.cpp
code/contexts/supersprint/: loadingsupersprintcontext.cpp  supersprintcontext.cpp
code/data/: PersistentWorldManager.cpp  PersistentWorldManager.h  alldata.cpp  gamedata.h
code/data/config/: configstring.cpp  gameconfigmanager.cpp
code/data/memcard/: memorycardmanager.cpp  memorycardmanager.h
code/debug/: debuginfo.cpp  debuginfo.h  profiler.cpp  profiler.h  section.cpp
code/events/: eventenum.h  eventmanager.cpp
code/gameflow/: gameflow.cpp
code/input/: FEMouse.cpp  Keyboard.h  MouseCursor.cpp  MouseCursor.h  RealController.cpp  RealController.h  basedamper.cpp  basedamper.h  constanteffect.cpp  constanteffect.h  controller.h  forceeffect.cpp  forceeffect.h  inputmanager.cpp  inputmanager.h  mappable.cpp  steeringspring.cpp  steeringspring.h  usercontroller.cpp  usercontroller.h  usercontrollerWin32.cpp  wheelrumble.cpp  wheelrumble.h
code/interiors/: interiormanager.cpp  interiormanager.h
code/loading/: cameradataloader.cpp  intersectionloader.cpp  loadingmanager.cpp  loadingmanager.h  locatorloader.cpp  roaddatasegmentloader.cpp  scroobyfilehandler.cpp  scroobyfilehandler.h  soundfilehandler.cpp
code/main/: commandlineoptions.cpp  dcmain.cpp  dcplatform.cpp  dcplatform.h  game.cpp  gcmain.cpp  gcplatform.cpp  globaltypes.h  ps2main.cpp  ps2platform.cpp  singletons.cpp  tuidunaligned.h  win32main.cpp  win32platform.cpp  win32platform.h  xboxmain.cpp  xboxplatform.cpp
code/memory/: allocpool.h  classsizetracker.cpp  classsizetracker.h  createheap.cpp  map.h  memoryutilities.cpp  srrmemory.cpp  srrmemory.h  stlallocators.h
code/meta/: actioneventlocator.cpp  directionallocator.cpp  eventlocator.cpp  fovlocator.cpp  interiorentrancelocator.cpp  locator.cpp  locator.h  locatorevents.h  locatortypes.h  occlusionlocator.cpp  scriptlocator.cpp  spheretriggervolume.cpp  staticcamlocator.cpp  triggerlocator.cpp  triggervolume.h  triggervolumetracker.cpp  zoneeventlocator.cpp
code/mission/: animatedicon.cpp  animatedicon.h  bonusmissioninfo.cpp  boss.h  gameplaymanager.cpp  gameplaymanager.h  mission.cpp  mission.h  missionmanager.cpp  missionscriptloader.cpp  missionscriptloader.h  missionstage.cpp  missionstage.h  statepropcollectible.cpp  statepropcollectible.h
code/mission/charactersheet/: allcharactersheet.cpp  charactersheet.h  charactersheetmanager.cpp  charactersheetmanager.h
code/mission/conditions/: leaveinteriorcondition.cpp  positioncondition.cpp  vehiclecarryingstateprop.cpp  vehiclecarryingstateprop.h
code/mission/objectives/: collectdumpedobjective.cpp  collectibleobjective.cpp  collectibleobjective.h  deliveryobjective.h  destroybossobjective.cpp  destroybossobjective.h  dialogueobjective.cpp  fmvobjective.cpp  getinobjective.cpp  gooutsideobjective.cpp  gotoobjective.cpp  gotoobjective.h  interiorobjective.cpp  loadvehicleobjective.cpp  loadvehicleobjective.h  missionobjective.cpp  pickupitemobjective.cpp  raceobjective.cpp  talktoobjective.cpp  talktoobjective.h
code/mission/respawnmanager/: respawnmanager.h
code/mission/rewards/: merchandise.cpp  merchandise.h  reward.cpp  rewardsmanager.cpp  rewardsmanager.h
code/mission/ufo/: tractorbeam.cpp  tractorbeam.h  ufo.h  weapon.h
code/presentation/: animplayer.cpp  language.cpp  mouthflapper.cpp  mouthflapper.h  nisplayer.cpp  playerdrawable.cpp  playerdrawable.h  presentation.cpp  presentation.h  simpleanimationplayer.cpp  simpleanimationplayer.h  transitionplayer.cpp  transitionplayer.h  tutorialmanager.cpp  tutorialmanager.h
code/presentation/fmvplayer/: fmvplayer.cpp  fmvuserinputhandler.cpp
code/presentation/gui/: guientity.h  guimanager.cpp  guimanager.h  guimenu.cpp  guimenu.h  guimenuitem.h  (+15 more)
code/roads/: geometry.h  intersection.h  lane.h  roadmanager.cpp  roadmanager.h  roadrendertest.cpp
code/sound/: listener.h  positionalsoundplayer.cpp  positionalsoundplayer.h  soundcluster.cpp  soundcluster.h  soundclusternameenum.h  soundloader.cpp  soundloader.h  soundmanager.cpp  soundmanager.h  soundrenderercallback.cpp
code/supersprint/: supersprintdrawable.h  supersprintmanager.cpp
code/worldsim/: avatar.cpp  hitnrunmanager.cpp  hitnrunmanager.h  vehiclecentral.cpp  vehiclecentral.h  worldphysicsmanager.cpp  worldphysicsmanager.h
(+718 files in other folders)
